--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.2",
     "@monaco-editor/react": "^4.5.0",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
@@ -18,6 +20,7 @@
     "monaco-emmet": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.10.0",
