--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.2",
     "@monaco-editor/react": "^4.5.0",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
     "monaco-emmet": "^3.1.1",
     "react": "^18.2.0",
