--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lottie-react": "^2.4.0",
     "monaco-emmet": "^3.1.1",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
