--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@monaco-editor/react": "^4.5.0",
     "@react-oauth/google": "^0.11.1",
     "@react-pdf/renderer": "^3.1.12",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
