--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
