--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.2",
     "@monaco-editor/react": "^4.5.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@react-oauth/google": "^0.11.1",
     "@react-pdf/renderer": "^3.1.12",
     "axios": "^1.3.6",
@@ -33,7 +34,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.10.0",
     "react-tagsinput": "^3.20.3",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
